--- a/front/package.json
+++ b/front/package.json
@@ -17,6 +17,7 @@
     "react": "^17.0.2",
     "react-apexcharts": "^1.3.9",
     "react-dom": "^17.0.2",
+    "react-js-loader": "^0.1.0",
     "react-nedux": "^1.0.17",
     "react-reveal": "^1.2.2",
     "react-scripts": "4.0.3",
