--- a/front/package.json
+++ b/front/package.json
@@ -13,6 +13,7 @@
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
     "apexcharts": "^3.29.0",
+    "lodash": "^4.17.21",
     "nedux": "^1.0.23",
     "react": "^17.0.2",
     "react-apexcharts": "^1.3.9",
@@ -50,6 +51,7 @@
     ]
   },
   "devDependencies": {
+    "@types/lodash": "^4.14.176",
     "autoprefixer": "^9.8.8",
     "postcss": "^7.0.39",
     "tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.2.17"
