--- a/front/package.json
+++ b/front/package.json
@@ -5,10 +5,6 @@
   "dependencies": {
     "@craco/craco": "^6.4.0",
     "@tailwindcss/forms": "^0.3.4",
-    "@testing-library/jest-dom": "^5.11.4",
-    "@testing-library/react": "^11.1.0",
-    "@testing-library/user-event": "^12.1.10",
-    "@types/jest": "^26.0.15",
     "@types/node": "^12.0.0",
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
@@ -35,8 +31,7 @@
   },
   "eslintConfig": {
     "extends": [
-      "react-app",
-      "react-app/jest"
+      "react-app"
     ]
   },
   "browserslist": {
@@ -52,6 +47,7 @@
     ]
   },
   "devDependencies": {
+    "@babel/helper-compilation-targets": "^7.16.3",
     "@types/lodash": "^4.14.176",
     "autoprefixer": "^9.8.8",
     "postcss": "^7.0.39",
