--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,7 +8,7 @@ services:
     links:
       - back
     volumes:
-      - ./front:/front
+      - ./front/src:/front/src
   back:
     container_name: back
     build: ./back
